# easymodel

./: .gitignore  .vercelignore  DEPLOYMENT.md  README.md  colab_backend.ipynb  gitignore  main.py  main_ml.py  main_simple.py  package-lock.json  pyproject.toml  requirements.txt  test_backend.html  vercel.json
.virtual_documents/research/: Finetuning.ipynb
easymodel/: __init__.py
easymodel/endpoints/: __init__.py  analytics.py  finetuning.py
easymodel/utils/: __init__.py  finetune2.py
easymodel/utils/text_analytics/: __init__.py  gqs.py  perplexity.py  semantic.py  textanalytics.py  tokenefficiency.py
grizzly/: README.md  VERCEL_ENV_SETUP.md  bun.lockb  env.template  next.config.js  package-lock.json  package.json  vercel.json
grizzly/prisma/: dev.db  dev.db-journal  schema.prisma
grizzly/prisma/migrations/20251108045837_init_sqlite/: migration.sql
grizzly/prisma/prisma/: dev.db
grizzly/src/: env.js  middleware.ts
grizzly/src/app/: layout.tsx  page.tsx
grizzly/src/app/redirect/: page.tsx
grizzly/src/components/: theme-toggle.tsx
grizzly/src/server/: db.ts
grizzly/src/stores/: flowStore.ts
grizzly/src/styles/: globals.css
polar/endpoints/: analytics.py  finetuning.py
polar/utils/: app.py  finetune2.py  finetune_model.py  finetune_space.py  newfinetune.py
polar/utils/text_analytics/: gqs.py  perplexity.py  semantic.py  textanalytics.py
research/: Finetuning.ipynb
tests/: run_all_tests.py  test_analytics.py  test_direct.py  test_endpoint.py  test_evaluate.py  test_finetune.py  test_finetune_local.py  test_main.py
venv312/: pyvenv.cfg
(+24 files in other folders)
